--- a/kubespray/cluster/inventory.ini
+++ b/kubespray/cluster/inventory.ini
@@ -1,21 +1,24 @@
+# ## Configure 'ip' variable to bind kubernetes services on a
+# ## different ip than the default iface
+# ## We should set etcd_member_name for etcd cluster. The node that is not a etcd member do not need to set the value, or can set the empty string value.
 [all]
 kube-master-1.home ansible_host=192.168.1.80
 kube-node-1.home ansible_host=192.168.1.85
 kube-node-2.home ansible_host=192.168.1.86
 
-[kube-master]
+[kube_control_plane]
 kube-master-1.home
 
 [etcd]
 kube-master-1.home
 
-[kube-node]
+[kube_node]
 kube-node-1.home
-kube-node-2
+kube-node-2.home
 
-[calico-rr]
+[calico_rr]
 
-[k8s-cluster:children]
-kube-master
-kube-node
-calico-rr
+[k8s_cluster:children]
+kube_control_plane
+kube_node
+calico_rr
