--- a/site/wordpress-deployment.yaml
+++ b/site/wordpress-deployment.yaml
@@ -10,7 +10,7 @@ spec:
   selector:
     app: wordpress
     tier: frontend
-  type: LoadBalancer
+  type: NodePort
 ---
 apiVersion: v1
 kind: PersistentVolume
@@ -64,7 +64,7 @@ spec:
         tier: frontend
     spec:
       containers:
-      - image: wordpress:5.8.0-apache
+      - image: wordpress:5.8.0-php7.4-apache
         name: wordpress
         env:
         - name: WORDPRESS_DB_HOST
