--- a/site/wordpress-deployment.yaml
+++ b/site/wordpress-deployment.yaml
@@ -24,25 +24,25 @@ spec:
   accessModes:
     - ReadWriteOnce
   persistentVolumeReclaimPolicy: Recycle
-  storageClassName: nfs
+  storageClassName: nfs-client
   nfs:
-    path: /mnt/nfs/pv002
+    path: /mnt/nfs
     server: 192.168.1.80
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: nfs-pvc002
+  name: nfs
 spec:
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
       storage: 1Gi
-  storageClassName: nfs
+  storageClassName: nfs-client
   selector:
     matchLabels:
-      pv: nfs-pv002
+      pv: nfs
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -78,9 +78,9 @@ spec:
         - containerPort: 80
           name: wordpress
         volumeMounts:
-        - name: nfs-pv002
+        - name: nfs
           mountPath: /var/www/html
       volumes:
-      - name: nfs-pv002
+      - name: nfs
         persistentVolumeClaim:
-          claimName: nfs-pvc002
+          claimName: nfs
