--- a/kubespray/cluster/inventory.ini
+++ b/kubespray/cluster/inventory.ini
@@ -2,19 +2,19 @@
 # ## different ip than the default iface
 # ## We should set etcd_member_name for etcd cluster. The node that is not a etcd member do not need to set the value, or can set the empty string value.
 [all]
-kube-master-1.home ansible_host=192.168.1.80
-kube-node-1.home ansible_host=192.168.1.85
-kube-node-2.home ansible_host=192.168.1.86
+kube-1.home ansible_host=192.168.1.80
+kube-2.home ansible_host=192.168.1.85
+kube-3.home ansible_host=192.168.1.86
 
 [kube_control_plane]
-kube-master-1.home
+kube-1.home
 
 [etcd]
-kube-master-1.home
+kube-1.home
 
 [kube_node]
-kube-node-1.home
-kube-node-2.home
+kube-2.home
+kube-3.home
 
 [calico_rr]
 
