--- a/roles/prepare-hosts/tasks/redhat.yml
+++ b/roles/prepare-hosts/tasks/redhat.yml
@@ -67,12 +67,12 @@
   when: selinux_ret.reboot_required
 
 - name: Restart server
-  command: sleep 10 && /sbin/shutdown -r now
+  command: /sbin/shutdown -r now
   async: 0
   poll: 0
   ignore_errors: true
 
 - name: Wait for system to become reachable again
   wait_for_connection:
-    delay: 60
-    timeout: 300
+    delay: 30
+    timeout: 60
