--- a/roles/prepare-hosts/tasks/redhat.yml
+++ b/roles/prepare-hosts/tasks/redhat.yml
@@ -66,9 +66,9 @@
   shell: setenforce 0
   when: selinux_ret.reboot_required
 
-- name: Restart server
+- name: Restart servers
   command: /sbin/shutdown -r now
-  async: 0
+  async: 30
   poll: 0
   ignore_errors: true
 
